syntax = "proto3";

package expenses;
option go_package="expensespb";

message Payment {
    int64 date = 1;
    string type = 2;
    string from = 3;
    string to = 4;
    repeated string tags = 5;
    float amount = 6;
}

message Category {
    string name = 1;
    float amount = 2;
}

message Expenses {
    repeated Payment payments = 1;
}

message Categories {
    repeated Category categories = 1;
}

message ExpensesRequest {
    int64 from_date = 1;
    int64 to_date = 2;
    int32 limit = 3;
    string tag = 4;
}

message CategoriesRequest {
    int64 from_date = 1;
    int64 to_date = 2;
    int32 limit = 3;
}

service ExpensesService{
    rpc GetExpenses(ExpensesRequest) returns (Expenses) {};
    rpc GetCategories(CategoriesRequest) returns (Categories) {};
}